--- a/ProgettoDatabase/ProgettoDatabase/ProgettoDatabase.csproj
+++ b/ProgettoDatabase/ProgettoDatabase/ProgettoDatabase.csproj
@@ -80,6 +80,12 @@
     <Compile Include="frmInserisciAeroporti.Designer.cs">
       <DependentUpon>frmInserisciAeroporti.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmInserisciVoli.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmInserisciVoli.Designer.cs">
+      <DependentUpon>frmInserisciVoli.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmModificaAerei.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +104,12 @@
     <Compile Include="frmModificaAeroporti.Designer.cs">
       <DependentUpon>frmModificaAeroporti.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmModificaVoli.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmModificaVoli.Designer.cs">
+      <DependentUpon>frmModificaVoli.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmVisualizzaAerei.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,8 +122,21 @@
     <Compile Include="frmVisualizzaAeroporti.Designer.cs">
       <DependentUpon>frmVisualizzaAeroporti.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmVisualizzaVoli.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVisualizzaVoli.Designer.cs">
+      <DependentUpon>frmVisualizzaVoli.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmVoli.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVoli.Designer.cs">
+      <DependentUpon>frmVoli.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Voli.cs" />
     <EmbeddedResource Include="frmAeroporti.resx">
       <DependentUpon>frmAeroporti.cs</DependentUpon>
     </EmbeddedResource>
@@ -133,11 +158,17 @@
     <EmbeddedResource Include="frmModificaAeroporti.resx">
       <DependentUpon>frmModificaAeroporti.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmModificaVoli.resx">
+      <DependentUpon>frmModificaVoli.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmVisualizzaAerei.resx">
       <DependentUpon>frmVisualizzaAerei.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmVisualizzaAeroporti.resx">
       <DependentUpon>frmVisualizzaAeroporti.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVoli.resx">
+      <DependentUpon>frmVoli.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
