--- a/ProgettoDatabase/ProgettoDatabase/ProgettoDatabase.csproj
+++ b/ProgettoDatabase/ProgettoDatabase/ProgettoDatabase.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="AeroportoDataSet.xsc">
       <DependentUpon>AeroportoDataSet.xsd</DependentUpon>
@@ -210,6 +211,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon1.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
